# Daedalus

./: .gitignore  CMakeLists.txt  Daedalus.sln  README.md  setup.bat
source/: Test.cpp
source/Engine/: Window.cpp  Window.h
source/Engine/Platform/Windows/: WindowWin32.cpp  WindowWin32.h
source/Renderer/OpenGL/: DaedalusGL.cpp  DaedalusGL.h  GlobalFunctions.h
source/engine/: CMakeLists.txt  Core.h  DaedalusGL.cpp  DaedalusGL.h  Main.cpp  Source.cpp  Test.cpp  Test.h  tempGLext.h
source/engine/Platform/: Window.cpp  Window.h
source/engine/Platform/Windows/: Window.cpp  Window.h  WindowWin32.cpp  WindowWin32.h
source/renderer/: Main.cpp  Source.cpp
source/renderer/GL/: DaedalusGL.cpp  DaedalusGL.h  GLDefinitions.h
source/renderer/OpenGL/: ContextGL.cpp  ContextGL.h
targets/vs2015/: engine.vcxproj  engine.vcxproj.filters  renderer.vcxproj  renderer.vcxproj.filters
targets/vs2015/engine/: engine.vcxproj  engine.vcxproj.filters  renderer.vcxproj  renderer.vcxproj.filters
targets/vs2017/: engine.vcxproj  engine.vcxproj.filters  rendererGL.vcxproj
tools/daedalusGLgenerator/: daedalusGL.cpp  daedalusGL.h  generate.py
tools/glcodegen/: declarations.h  definitions.cpp  definitions.h  functions.txt  generate.py  initialization.h
